cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_30.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:29: error: DEAD_STORE
  The value written to &in2 (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:29:5: Write of unused value
27.       in2 = &(*inw)[0];
28.       c2l(in2, inW0);
29.       c2l(in2, inW1);
          ^
30.       in2 = &(*outw)[0];
31.       c2l(in2, outW0);
